--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -121,11 +121,12 @@
 # CVE-????-???? 3.1.4   http://osvdb.org/73721 http://osvdb.org/73722 http://osvdb.org/73723 http://wordpress.org/news/2011/06/wordpress-3-1-4/
 # CVE-2014-0165 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105630
 # CVE-2014-0166 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105620
+# CVE-2012-5868 4.0     http://whiteoaksecurity.com/blog/2012/12/17/cve-2012-5868-wordpress-342-sessions-not-terminated-upon-explicit-user-logout http://blog.spiderlabs.com/2014/09/leveraging-lfi-to-get-full-compromise-on-wordpress-sites.html
 WordPress:
   1:
     location: ['/wp-includes/version.php']
-    secure_version: '3.9.2'
+    secure_version: '4.0'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5203 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5204 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5205 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5240 http://wordpress.org/news/2014/08/wordpress-3-9-2/'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-5868 http://whiteoaksecurity.com/blog/2012/12/17/cve-2012-5868-wordpress-342-sessions-not-terminated-upon-explicit-user-logout http://blog.spiderlabs.com/2014/09/leveraging-lfi-to-get-full-compromise-on-wordpress-sites.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
