--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -60,13 +60,16 @@
 # oC-SA-2015-016    CVE-2015-7298   Only affects ownCloud Desktop
 # oC-SA-2015-017                    8.1.2
 # oC-SA-2015-018                    8.1.2/8.0.7/7.0.9
+# oC-SA-2016-001    CVE-2016-1498   8.2.2/8.1.5/8.0.10/7.0.12
 # oC-SA-2016-002    CVE-2016-1499   8.2.2/8.1.5/8.0.10
+# oC-SA-2016-003    CVE-2016-1500   8.2.2/8.1.5/8.0.10/7.0.12
+# oC-SA-2016-004    CVE-2016-1501   8.1.4/8.0.9
 ownCloud 8.2:
   1:
     location: ['/version.php']
     secure_version: '8.2.2'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.1\.[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://owncloud.org/security/advisory/?id=oC-SA-2016-002'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1498 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1500 https://owncloud.org/security/advisory/?id=oC-SA-2016-001 https://owncloud.org/security/advisory/?id=oC-SA-2016-002 https://owncloud.org/security/advisory/?id=oC-SA-2016-003'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 8.1:
@@ -74,7 +77,7 @@ ownCloud 8.1:
     location: ['/version.php']
     secure_version: '8.1.5'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.1\.[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://owncloud.org/security/advisory/?id=oC-SA-2016-002'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1498 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1500 https://owncloud.org/security/advisory/?id=oC-SA-2016-001 https://owncloud.org/security/advisory/?id=oC-SA-2016-002 https://owncloud.org/security/advisory/?id=oC-SA-2016-003'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 8.0:
@@ -82,15 +85,15 @@ ownCloud 8.0:
     location: ['/version.php']
     secure_version: '8.0.10'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.0\.[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://owncloud.org/security/advisory/?id=oC-SA-2016-002'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1498 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1499 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1500 https://owncloud.org/security/advisory/?id=oC-SA-2016-001 https://owncloud.org/security/advisory/?id=oC-SA-2016-002 https://owncloud.org/security/advisory/?id=oC-SA-2016-003'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 7:
   1:
     location: ['/version.php']
-    secure_version: '7.0.9'
+    secure_version: '7.0.12'
     regexp: ['\$OC_VersionString.*?(?P<version>7\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-018'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1498 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1500 https://owncloud.org/security/advisory/?id=oC-SA-2016-001 https://owncloud.org/security/advisory/?id=oC-SA-2016-003'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 ownCloud 6:
