--- a/yamls/testlink.yml
+++ b/yamls/testlink.yml
@@ -21,11 +21,12 @@
 # CVE-2015-7391 1.9.14  https://packetstormsecurity.com/files/133891/NS-15-016.txt
 # CVE-2015-XXXX 1.9.15  http://www.openwall.com/lists/oss-security/2015/11/08/2
 # CVE-2015-XXXX 1.9.15  http://www.openwall.com/lists/oss-security/2015/11/08/3
+# CVE-2015-XXXX 1.9.15  http://mantis.testlink.org/view.php?id=7402 https://www.htbridge.com/advisory/HTB23288
 TestLink:
   1:
     location: ['/cfg/const.inc.php']
     secure_version: '1.9.15'
     regexp: ['define.*?TL_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/11/08/2 http://www.openwall.com/lists/oss-security/2015/11/08/3'
+    cve: 'http://www.openwall.com/lists/oss-security/2015/11/08/2 http://www.openwall.com/lists/oss-security/2015/11/08/3 https://www.htbridge.com/advisory/HTB23288'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
