--- a/yamls/bigtree.yml
+++ b/yamls/bigtree.yml
@@ -6,11 +6,12 @@
 # CVE-2015-XXXX 4.2.3 https://github.com/bigtreecms/BigTree-CMS/commit/e13aa4795cdeb1ab1dc0f5fd0b66df2d1296591d https://github.com/bigtreecms/BigTree-CMS/issues/205 CVE request http://www.openwall.com/lists/oss-security/2015/06/26/5
 # CVE-2015-XXXX 4.2.4 http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-Cross-Site-Scripting-Vulnerabilities-38.html
 # CVE-2015-XXXX 4.2.4 http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-SQL-Injection-Vulnerabilities-39.html
+# CVE-2016-XXXX 4.2.9 https://blog.curesec.com/article/blog/BigTree-428-Object-Injection-amp-Improper-Filename-Sanitation-152.html
 BigTree CMS:
   1:
     location: ['/core/version.php']
-    secure_version: '4.2.4'
+    secure_version: '4.2.9'
     regexp: ['.*?define.*?BIGTREE_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-Cross-Site-Scripting-Vulnerabilities-38.html http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-SQL-Injection-Vulnerabilities-39.html'
+    cve: 'https://blog.curesec.com/article/blog/BigTree-428-Object-Injection-amp-Improper-Filename-Sanitation-152.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
