--- a/yamls/coppermine.yml
+++ b/yamls/coppermine.yml
@@ -1,12 +1,12 @@
 # URL: http://coppermine-gallery.net/
 # NOT-FOR-US: HTB22836 path disclosure
-# NOT-FOR-US: CVE-2015-6528 https://packetstormsecurity.com/files/133059/Coppermine-Photo-Gallery-1.5.36-Cross-Site-Scripting.html only affects instances where installation has not been completed.
-# CVE-2011-2476 1.5.12  http://osvdb.org/73129 http://www.openwall.com/lists/oss-security/2011/06/08/2
-# CVE-2012-1613 1.5.20  http://osvdb.org/80731 waraxe-2012-SA#i081
-# CVE-2012-1614 1.5.20  http://osvdb.org/80732 http://osvdb.org/80733 http://osvdb.org/80734 http://osvdb.org/80735 waraxe-2012-SA#081
+# NOT-FOR-US: CVE-2015-6528 https://packetstormsecurity.com/files/133059/Coppermine-Photo-Gallery-1.5.36-Cross-Site-Scripting.html only affects instances where installation has not been completed. http://forum.coppermine-gallery.net/index.php/topic,78662.msg381214.html
+# CVE-2010-4815 1.4.26  http://forum.coppermine-gallery.net/index.php/topic,63510.0.html
+# CVE-2011-2476 1.5.12  http://www.openwall.com/lists/oss-security/2011/06/08/2
+# CVE-2012-1613 1.5.20  http://www.waraxe.us/advisory-81.html
+# CVE-2012-1614 1.5.20
 # CVE-2014-4612 1.5.28  http://forum.coppermine-gallery.net/index.php/topic,77376.0.html http://sourceforge.net/p/coppermine/code/8674/
-# CVE-2014-XXXX 1.5.26  http://osvdb.org/104357 http://osvdb.org/104358
-# CVE-2015-3921 1.5.36
+# CVE-2015-3921 1.5.36  http://forum.coppermine-gallery.net/index.php/topic,78194.0.html
 # CVE-2015-3922 1.5.36
 # CVE-2015-3923 1.5.36
 Coppermine:
