--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -542,12 +542,13 @@ WordPress plugin wp-symposium-pro:
     cve: 'http://seclists.org/bugtraq/2016/Jan/26'  # CVE request http://www.openwall.com/lists/oss-security/2016/01/07/5
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# https://github.com/cybersecurityworks/Disclosed/issues/9 asked status of CVE via email 2016-01-08
 WordPress plugin crony:
   1:
     location: ['/wp-content/plugins/crony/readme.txt']
-    secure_version: '0.4.6'
+    secure_version: '0.4.7'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://github.com/cybersecurityworks/Disclosed/issues/9'  # Asked status of CVE via email 2016-01-08
+    cve: 'https://wordpress.org/plugins/crony/changelog/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-easy-gallery:
