--- a/yamls/roundcube.yml
+++ b/yamls/roundcube.yml
@@ -29,11 +29,12 @@
 # CVE-2015-8794 1.1.2/1.0.6
 # CVE-2015-8105 1.1.3/1.0.7
 # CVE-2015-8770 1.1.4/1.0.8 https://roundcube.net/news/2015/12/26/updates-1.1.4-and-1.0.8-released/ https://www.htbridge.com/advisory/HTB23283
+# CVE-2016-XXXX 1.1.5/1.0.9 https://roundcube.net/news/2016/04/20/updates-1.1.5-and-1.0.9-published
 Roundcube:
   1:
     location: ['/program/include/iniset.php']
-    secure_version: '1.1.4'
+    secure_version: '1.1.5'
     regexp: ['define.*?RCMAIL_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8770 https://roundcube.net/news/2015/12/26/updates-1.1.4-and-1.0.8-released/ https://www.htbridge.com/advisory/HTB23283'
+    cve: 'https://roundcube.net/news/2016/04/20/updates-1.1.5-and-1.0.9-published'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
