--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -28,12 +28,14 @@ WordPress plugin wassup:
 # CVE-2012-4263 better-wp-security 3.2.5
 # CVE-2012-4264 better-wp-security 3.2.5
 # N/A           better-wp-security N/A      http://packetstormsecurity.com/files/125219/
+# CVE-2016-XXXX better-wp-security 5.3.1 http://www.openwall.com/lists/oss-security/2016/04/21/2
+# CVE-2016-XXXX better-wp-security 5.3.1 http://www.openwall.com/lists/oss-security/2016/04/21/3
 WordPress plugin better-wp-security:
   1:
     location: ['/wp-content/plugins/better-wp-security/readme.txt']
-    secure_version: '3.2.5'
+    secure_version: '5.3.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-4263 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-4264'
+    cve: 'https://wordpress.org/plugins/better-wp-security/changelog/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2013-5977 cart66-lite 1.5.1.15
