--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1600,6 +1600,6 @@ WordPress plugin e-search:
     location: ['/wp-content/plugins/e-search/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000130 http://www.vapidlabs.com/wp/wp_advisory.php?v=394'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000130 http://www.vapidlabs.com/wp/wp_advisory.php?v=394 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000131 http://www.vapidlabs.com/wp/wp_advisory.php?v=393'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
