--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -861,7 +861,7 @@ WordPress plugin enhanced-tooltipglossary:
     location: ['/wp-content/plugins/enhanced-tooltipglossary/readme.txt']
     secure_version: '3.3.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=37 DWF-2016-77246 http://www.openwall.com/lists/oss-security/2016/05/11/12'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000132 http://www.vapidlabs.com/wp/wp_advisory.php?v=37 DWF-2016-77246 http://www.openwall.com/lists/oss-security/2016/05/11/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin tera-charts:
