--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1616,6 +1616,6 @@ WordPress plugin hdw-tube:
     location: ['/wp-content/plugins/hdw-tube/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000134 http://www.vapidlabs.com/wp/wp_advisory.php?v=530'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000134 http://www.vapidlabs.com/wp/wp_advisory.php?v=530 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000135 http://www.vapidlabs.com/wp/wp_advisory.php?v=533'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
