--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1680,6 +1680,6 @@ WordPress plugin photoxhibit:
     location: ['/wp-content/plugins/photoxhibit/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000143 http://www.vapidlabs.com/wp/wp_advisory.php?v=780'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000143 http://www.vapidlabs.com/wp/wp_advisory.php?v=780 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000144 http://www.vapidlabs.com/wp/wp_advisory.php?v=778'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
