--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -869,7 +869,7 @@ WordPress plugin tera-charts:
     location: ['/wp-content/plugins/tera-charts/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=455 DWF-2016-77716 http://www.openwall.com/lists/oss-security/2016/05/11/12'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000151 http://www.vapidlabs.com/wp/wp_advisory.php?v=455 DWF-2016-77716 http://www.openwall.com/lists/oss-security/2016/05/11/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin pondol-carousel:
