--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -59,13 +59,16 @@
 # https://drupal.org/SA-CORE-2016-004   CVE-2016-7570   8.1.10
 # https://drupal.org/SA-CORE-2016-004   CVE-2016-7571   8.1.10
 # https://drupal.org/SA-CORE-2016-004   CVE-2016-7572   8.1.10
-# https://drupal.org/SA-CORE-2016-005   TODO            8.2.3/7.52 CVE request http://www.openwall.com/lists/oss-security/2016/11/18/8
+# https://drupal.org/SA-CORE-2016-005   CVE-2016-9449   8.2.3/7.52 http://www.openwall.com/lists/oss-security/2016/11/18/8
+# https://drupal.org/SA-CORE-2016-005   CVE-2016-9450   8.2.3/7.52
+# https://drupal.org/SA-CORE-2016-005   CVE-2016-9451   8.2.3/7.52
+# https://drupal.org/SA-CORE-2016-005   CVE-2016-9452   8.2.3/7.52
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
     secure_version: '8.2.3'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2016-005'
+    cve: 'https://drupal.org/SA-CORE-2016-005 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9449 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9450 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9451 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9452'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
@@ -73,7 +76,7 @@ Drupal 7:
     location: ['/includes/bootstrap.inc']
     secure_version: '7.52'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2016-005'
+    cve: 'https://drupal.org/SA-CORE-2016-005 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9449 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9450 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9451 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9452'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
