--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -147,11 +147,32 @@
 # PMASA-2016-54 CVE-2016-6631   4.6.4/4.4.15.8/4.0.10.17
 # PMASA-2016-55 CVE-2016-6632   4.6.4/4.4.15.8/4.0.10.17
 # PMASA-2016-56 CVE-2016-6633   4.6.4/4.4.15.8/4.0.10.17
+# PMASA-2016-57 CVE-2016-4412   4.0.10.16
+# PMASA-2016-58 CVE-2016-9847   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-59 CVE-2016-9848   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-60 CVE-2016-9849   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-61 CVE-2016-9850   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-62 CVE-2016-9851   4.6.5/4.4.15.9
+# PMASA-2016-63 CVE-2016-9852   4.6.5/4.4.15.9
+# PMASA-2016-63 CVE-2016-9853   4.6.5/4.4.15.9
+# PMASA-2016-63 CVE-2016-9854   4.6.5/4.4.15.9
+# PMASA-2016-63 CVE-2016-9855   4.6.5/4.4.15.9
+# PMASA-2016-64 CVE-2016-9856   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-64 CVE-2016-9857   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-65 CVE-2016-9858   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-65 CVE-2016-9859   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-65 CVE-2016-9860   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-66 CVE-2016-9861   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-67 CVE-2016-9862   4.6.5
+# PMASA-2016-68 CVE-2016-9863   4.6.5
+# PMASA-2016-69 CVE-2016-9864   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-70 CVE-2016-9865   4.6.5/4.4.15.9/4.0.10.18
+# PMASA-2016-71 CVE-2016-9866   4.6.5/4.4.15.9/4.0.10.18
 phpMyAdmin:
   1:
     location: ['/libraries/Config.class.php']
-    secure_version: '4.6.4'
+    secure_version: '4.6.5'
     regexp: ['.*?PMA_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://www.phpmyadmin.net/security/PMASA-2016-29/ - https://www.phpmyadmin.net/security/PMASA-2016-56/'
+    cve: 'https://www.phpmyadmin.net/security/PMASA-2016-58/ - https://www.phpmyadmin.net/security/PMASA-2016-71/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
