--- a/yamls/genix.yml
+++ b/yamls/genix.yml
@@ -8,15 +8,15 @@
 # CVE-2017-5519 1.0.0   https://github.com/semplon/GeniXCMS/issues/67
 # CVE-2017-5520 1.0.0   https://github.com/semplon/GeniXCMS/issues/62
 # CVE-2017-5959 1.0.2   https://github.com/semplon/GeniXCMS/issues/70
-# CVE-2017-6065 TODO    https://github.com/semplon/GeniXCMS/issues/71 latest 1.0.2 is affected
-# CVE-2017-8762 TODO    https://github.com/semplon/GeniXCMS/issues/73 latest 1.0.2 is affected
-# CVE-2017-8780 TODO    https://github.com/semplon/GeniXCMS/issues/74 latest 1.0.2 is affected
-# CVE-2017-8827 TODO
+# CVE-2017-6065 TODO    https://github.com/semplon/GeniXCMS/issues/71 latest 1.1.0 is affected
+# CVE-2017-8762 TODO    https://github.com/semplon/GeniXCMS/issues/73 latest 1.1.0 is affected
+# CVE-2017-8827 TODO    https://github.com/semplon/GeniXCMS/issues/75
+# CVE-2017-8780 1.1.0   https://github.com/semplon/GeniXCMS/issues/74
 GeniXCMS:
   1:
     location: ['/inc/lib/System.class.php']
-    secure_version: '1.0.2'
+    secure_version: '1.1.0'
     regexp: ['    static \$version          = "(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-5959'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8780'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
