--- a/yamls/genix.yml
+++ b/yamls/genix.yml
@@ -12,11 +12,12 @@
 # CVE-2017-8762 TODO    https://github.com/semplon/GeniXCMS/issues/73 latest 1.1.0 is affected
 # CVE-2017-8827 TODO    https://github.com/semplon/GeniXCMS/issues/75
 # CVE-2017-8780 1.1.0   https://github.com/semplon/GeniXCMS/issues/74
+# CVE-2017-14231 1.1.0  https://github.com/semplon/GeniXCMS/issues/78
 GeniXCMS:
   1:
     location: ['/inc/lib/System.class.php']
     secure_version: '1.1.0'
     regexp: ['    static \$version          = "(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8780'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8780 https://nvd.nist.gov/vuln/detail/CVE-2017-14231'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
