--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -16,8 +16,7 @@ WordPress plugin videowhisper-video-presentation:
     location: ['/wp-content/plugins/videowhisper-video-presentation/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    # TODO: CVE requested 2018-10-05
-    cve: 'https://www.openwall.com/lists/oss-security/2015/04/01/2'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9272 https://www.openwall.com/lists/oss-security/2015/04/01/2 http://www.vapid.dhs.org/advisory.php?v=117'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2008-0520 1.4.4 http://www.exploit-db.com/exploits/5017/
