--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -159,51 +159,59 @@
 # CVE-2018-11328 3.8.8  https://developer.joomla.org/security-centre/736-20180508-core-possible-xss-attack-in-the-redirect-method.html
 # CVE-2018-12711 3.8.9  https://developer.joomla.org/security-centre/740-20180602-core-xss-vulnerability-in-language-switcher-module
 # CVE-2018-12712 3.8.9  https://developer.joomla.org/security-centre/741-20180601-core-local-file-inclusion-with-php-5-3
+# CVE-2018-15880 3.8.12 https://developer.joomla.org/security-centre/744-20180802-core-stored-xss-vulnerability-in-the-frontend-profile.html
+# CVE-2018-15881 3.8.12 https://developer.joomla.org/security-centre/745-20180803-core-acl-violation-in-custom-fields.html
+# CVE-2018-15882 3.8.12 https://developer.joomla.org/security-centre/743-20180801-core-hardening-the-inputfilter-for-phar-stubs.html
+# CVE-2018-17855 3.8.13 https://developer.joomla.org/security-centre/754-20181004-core-acl-violation-in-com-users-for-the-admin-verification
+# CVE-2018-17856 3.8.13 https://developer.joomla.org/security-centre/752-20181002-core-inadequate-default-access-level-for-com-joomlaupdate.html
+# CVE-2018-17857 3.8.13 https://developer.joomla.org/security-centre/753-20181003-core-access-level-violation-in-com-tags
+# CVE-2018-17858 3.8.13 https://developer.joomla.org/security-centre/755-20181005-core-csrf-hardening-in-com-installer.html
+# CVE-2018-17859 3.8.13 https://developer.joomla.org/security-centre/751-20181001-core-hardening-com-contact-contact-form.html
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.8.9'
+    secure_version: '3.8.13'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://developer.joomla.org/security-centre/740-20180602-core-xss-vulnerability-in-language-switcher-module https://nvd.nist.gov/vuln/detail/CVE-2018-12711 https://developer.joomla.org/security-centre/741-20180601-core-local-file-inclusion-with-php-5-3 https://nvd.nist.gov/vuln/detail/CVE-2018-12712'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-17855 https://nvd.nist.gov/vuln/detail/CVE-2018-17856 https://nvd.nist.gov/vuln/detail/CVE-2018-17857 https://nvd.nist.gov/vuln/detail/CVE-2018-17858 https://nvd.nist.gov/vuln/detail/CVE-2018-17859'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.8.9'
+    secure_version: '3.8.13'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.8.9 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.8.13 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.8.9'
+    secure_version: '3.8.13'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.8.9 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.8.13 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.8.9'
+    secure_version: '3.8.13'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.8.9 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.8.13 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.8.9'
+    secure_version: '3.8.13'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.8.9 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.8.13 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.8.9'
+    secure_version: '3.8.13'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.8.9 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.8.13 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
