--- a/yamls/bigtree.yml
+++ b/yamls/bigtree.yml
@@ -1,45 +1,56 @@
 # URL: https://www.bigtreecms.org/ https://github.com/bigtreecms/BigTree-CMS/
 # NFU: http://www.openwall.com/lists/oss-security/2016/11/24/5 Form Builder extension
-# CVE-2013-4879 ? HTB23165
-# CVE-2013-4880 ? HTB23165
-# CVE-2013-4881 ? HTB23165
-# CVE-2013-5313 ? https://github.com/bigtreecms/BigTree-CMS/commit/4b0faa90fa8b9e1776c86db716894dcd7e6b4834
+# NFU: CVE-2018-10183 less.php submodule. no fix 2018-12-25
+# CVE-2013-4879 HTB23165
+# CVE-2013-4880 HTB23165
+# CVE-2013-4881 HTB23165
+# CVE-2013-5313 https://github.com/bigtreecms/BigTree-CMS/commit/4b0faa90fa8b9e1776c86db716894dcd7e6b4834
 # CVE-2015-XXXX 4.2.3 https://github.com/bigtreecms/BigTree-CMS/commit/e13aa4795cdeb1ab1dc0f5fd0b66df2d1296591d https://github.com/bigtreecms/BigTree-CMS/issues/205 CVE request http://www.openwall.com/lists/oss-security/2015/06/26/5
 # CVE-2015-XXXX 4.2.4 http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-Cross-Site-Scripting-Vulnerabilities-38.html
 # CVE-2015-XXXX 4.2.4 http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-SQL-Injection-Vulnerabilities-39.html
 # CVE-2016-XXXX 4.2.9 https://blog.curesec.com/article/blog/BigTree-428-Object-Injection-amp-Improper-Filename-Sanitation-152.html
-# TODO: pending 4.2.12/4.1.16 https://github.com/bigtreecms/BigTree-CMS/pull/256 http://www.openwall.com/lists/oss-security/2016/11/11/13
-# TODO: no fix, pending CVE request http://www.openwall.com/lists/oss-security/2016/11/24/4
-# TODO: http://www.openwall.com/lists/oss-security/2016/12/07/1 https://github.com/bigtreecms/BigTree-CMS/issues/264 https://github.com/bigtreecms/BigTree-CMS/commit/59ebef5978f80e2fdc7b4db4a28b668c5a39fbc3
-# TODO: http://www.openwall.com/lists/oss-security/2016/12/07/2
+# 4.2.12/4.1.16 https://github.com/bigtreecms/BigTree-CMS/pull/256 http://www.openwall.com/lists/oss-security/2016/11/11/13
+# http://www.openwall.com/lists/oss-security/2016/11/24/4
+# http://www.openwall.com/lists/oss-security/2016/12/07/1 https://github.com/bigtreecms/BigTree-CMS/issues/264 https://github.com/bigtreecms/BigTree-CMS/commit/59ebef5978f80e2fdc7b4db4a28b668c5a39fbc3
+# http://www.openwall.com/lists/oss-security/2016/12/07/2
 # CVE-2016-10223 4.2.15
 # CVE-2017-6914 4.2.17 https://github.com/bigtreecms/BigTree-CMS/issues/275
 # CVE-2017-6915 4.2.17 https://github.com/bigtreecms/BigTree-CMS/issues/275
 # CVE-2017-6916 4.2.17 https://github.com/bigtreecms/BigTree-CMS/issues/275
 # CVE-2017-6917 4.2.17 https://github.com/bigtreecms/BigTree-CMS/issues/275
 # CVE-2017-6918 4.2.17
-# CVE-2017-7881 TODO https://github.com/bigtreecms/BigTree-CMS/commit/7761481ac40d83ac29fef42bc6b3c07c86694b56 fix is not yet in official release
 # CVE-2017-7695
-# CVE-2017-9364 TODO https://github.com/bigtreecms/BigTree-CMS/issues/280 https://github.com/bigtreecms/BigTree-CMS/commit/b72293946951cc650eaf51f5d2f62ceac6335e12
-# CVE-2017-9365 TODO https://github.com/bigtreecms/BigTree-CMS/issues/281 https://github.com/bigtreecms/BigTree-CMS/commit/c17d09b05d9c20c214ee2f4fbb52f7307a7b4b6f
-# CVE-2017-9378 TODO
-# CVE-2017-9379 TODO
-# CVE-2017-9427 TODO
-# CVE-2017-9428 TODO
-# CVE-2017-9441 TODO
-# CVE-2017-9442 TODO
-# CVE-2017-9443 TODO
-# CVE-2017-9444 TODO
-# CVE-2017-9448 TODO
-# CVE-2017-9449 TODO
-# CVE-2017-9546 TODO
-# CVE-2017-9547 TODO
-# CVE-2017-9548 TODO
+# CVE-2017-7881 https://github.com/bigtreecms/BigTree-CMS/commit/7761481ac40d83ac29fef42bc6b3c07c86694b56 fix is not yet in official release
+# CVE-2017-9364 https://github.com/bigtreecms/BigTree-CMS/issues/280 https://github.com/bigtreecms/BigTree-CMS/commit/b72293946951cc650eaf51f5d2f62ceac6335e12
+# CVE-2017-9365 https://github.com/bigtreecms/BigTree-CMS/issues/281 https://github.com/bigtreecms/BigTree-CMS/commit/c17d09b05d9c20c214ee2f4fbb52f7307a7b4b6f
+# CVE-2017-9378
+# CVE-2017-9379
+# CVE-2017-9427
+# CVE-2017-9428
+# CVE-2017-9441
+# CVE-2017-9442
+# CVE-2017-9443
+# CVE-2017-9444
+# CVE-2017-9448
+# CVE-2017-9449
+# CVE-2017-9546
+# CVE-2017-9547
+# CVE-2017-9548
+# CVE-2017-11736 4.2.19 https://github.com/bigtreecms/BigTree-CMS/issues/304
+# CVE-2017-16961 4.2.20 https://github.com/bigtreecms/BigTree-CMS/issues/323
+# CVE-2018-6013 4.2.20 https://github.com/bigtreecms/BigTree-CMS/issues/327
+# CVE-2018-10364 4.2.22 https://github.com/bigtreecms/BigTree-CMS/issues/332
+# CVE-2018-10574 4.2.23 https://github.com/bigtreecms/BigTree-CMS/issues/335
+# CVE-2018-17341 4.3 https://github.com/bigtreecms/BigTree-CMS/issues/345
+# CVE-2018-18308 TODO https://packetstormsecurity.com/files/149788/BigTree-CMS-4.2.23-Cross-Site-Scripting.html https://www.exploit-db.com/exploits/45628
+# CVE-2018-18380 4.2.24 https://github.com/bigtreecms/BigTree-CMS/commit/c69402c4764ed9a76301c57277aefe70141b6418
+# CVE-2018-20405 N/A https://github.com/bigtreecms/BigTree-CMS/issues/354 path disclosure
+# CVE-2018-1000521 4.2.22 https://github.com/bigtreecms/BigTree-CMS/issues/328
 BigTree CMS:
   1:
     location: ['/core/version.php']
-    secure_version: '4.2.17'
+    secure_version: '4.3'
     regexp: ['.*?define.*?BIGTREE_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-6914 https://nvd.nist.gov/vuln/detail/CVE-2017-6915 https://nvd.nist.gov/vuln/detail/CVE-2017-6917 https://nvd.nist.gov/vuln/detail/CVE-2017-6918'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-17341'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
