--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2640,7 +2640,7 @@ WordPress plugin social-pug:
     location: ['/wp-content/plugins/social-pug/readme.txt']
     secure_version: '1.2.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://advisories.dxw.com/advisories/reflected-xss-in-social-pug-easy-social-share-buttons-could-allow-an-attacker-to-do-almost-anything-an-admin-user-can/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-10736 https://advisories.dxw.com/advisories/reflected-xss-in-social-pug-easy-social-share-buttons-could-allow-an-attacker-to-do-almost-anything-an-admin-user-can/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin mapsvg-lite-interactive-vector-maps:
